# LenaLab

./: .env.example  .gitignore  GALLERY.md  LICENSE  README.md  RESULTS.md  pat-a-mat-3d-project-context.md  requirements.txt
artifacts/: agent_authored_bev_scaffold_model.py  agent_authored_bev_v1.py  agent_authored_occ_scaffold_model.py  agent_authored_occ_v1.py  agent_authored_vo_kitti_ba_v2.py  agent_authored_vo_kitti_ba_v3.py  agent_authored_vo_kitti_ba_v4_tooslow.py  agent_authored_vo_kitti_ba_wip.py  agent_authored_vo_kitti_slam_gpu_v1.py  agent_authored_vo_kitti_slam_scaffold.py  agent_authored_vo_kitti_slam_v1.py  agent_authored_vo_kitti_slam_v2_wip.py  agent_authored_vo_kitti_slam_v4.py  agent_authored_vo_kitti_v1.py  agent_authored_vo_learned_v1.py  agent_authored_vo_m2_tourn_bow_fullgraph.py  agent_authored_vo_m2_tourn_conservative_drift.py  agent_authored_vo_m2_tourn_robust_verified.py  agent_authored_vo_oracle_posegraph.py  agent_authored_vo_rgbd_v1.py  agent_authored_vo_slam_v1.py  agent_authored_vo_slam_v2.py  agent_authored_vo_synth.py  agent_authored_vo_tum_v1.py  agent_authored_vo_tum_v2.py  agent_authored_vo_vio.py  audit_repro_results.txt
claudedocs/: accurate_results_report_2026-06-11.md  audit_progress_2026-06-09.md  bev_domain_technical_note_2026-06-14.md  bev_track_b_report_2026-06-15.md  blog_agent_in_a_lab_2026-06-03.md  cloud_runbook.md  design_comfyui_stylized_camera_pipeline.md  design_deform_manifold_poc_2026-06-26.md  design_learned3d_qkv_wedge_2026-06-24.md  results_audit_2026-06-09.md  (+31 more)
cpp_vio/: CMakeLists.txt  main.cpp  main_vio_wip.cpp
(+341 files in other folders)
